@@ -2,6 +2,7 @@
 
 2006-11-14
 	* Fix compile error with --disable-x11.
+	* Add new timed thread abstraction file.
 
 2006-11-13
 	* Use pthread_cond_timedwait() instead of sleep() in audacious
